[package]
name = "metafashion-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.21", default-features=false }
lazy_static = "1.4.0"
log = "0.4.16"
mobc = "0.7.3"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
warp = "0.3.2"