[package]
name = "metafashion-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
axum = { version = "0.4.8", features = ["ws", "headers"] }
futures = "0.3.21"
chrono = { version = "0.4.19", features = ["serde"] }
headers = "0.3.7"
rustls = "0.20.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.9.0"
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
webpki-roots = "0.22.2"